--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -27,6 +27,7 @@ block content
 							.reserv-small-parametrs-item__content
 								.reserv-small-parametrs-item__ttl Дата заезда
 								.select-date
+									.select-date__arrow
 									.label-date-first#formatDate
 										span.dd 10
 										span.mm февраля
@@ -36,6 +37,7 @@ block content
 							.reserv-small-parametrs-item__content
 								.reserv-small-parametrs-item__ttl Дата выезда
 								.select-date
+									.select-date__arrow
 									.label-date-first
 										span.dd 15
 										span.mm aпреля
