--- a/app/templates/reserv.jade
+++ b/app/templates/reserv.jade
@@ -26,6 +26,7 @@ block content
                                 .reserv-select-date
                                     .reserv-small-parametrs-item__ttl Дата заезда
                                     .select-date
+                                        .select-date__arrow
                                         .label-date-first#formatDate
                                             span.dd 10
                                             span.mm февраля
@@ -34,6 +35,7 @@ block content
                                 .reserv-select-date
                                     .reserv-small-parametrs-item__ttl Дата выезда
                                     .select-date
+                                        .select-date__arrow
                                         .label-date-first
                                             span.dd 15
                                             span.mm aпреля
