--- a/app/templates/rooms.jade
+++ b/app/templates/rooms.jade
@@ -57,6 +57,7 @@ block content
 							.reserv-small-parametrs-item__content
 								.reserv-small-parametrs-item__ttl Дата заезда
 								.select-date
+									.select-date__arrow
 									.label-date-first#formatDate
 										span.dd 10
 										span.mm февраля
@@ -66,6 +67,7 @@ block content
 							.reserv-small-parametrs-item__content
 								.reserv-small-parametrs-item__ttl Дата выезда
 								.select-date
+									.select-date__arrow
 									.label-date-first
 										span.dd 15
 										span.mm aпреля
