--- a/app/sass/blocks/_callback.scss
+++ b/app/sass/blocks/_callback.scss
@@ -1,21 +1,14 @@
-#callback {
-  width: 539px;
-  height: 879px;
-  background: url(images/callback.png) no-repeat;
+#callback{
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  margin: 0 auto;
+  width: 100%;
+  height: 100%;
   display: none;
   opacity: 0;
   z-index: 12;
-  transition: transform .6s;
-  transform-style: preserve-3d;
-
-  &.flip{
-    transform: rotateY( 180deg );
-  }
+  overflow-y: auto;
 
   &__close{
     width: 21px;
@@ -42,6 +35,21 @@
     left:0;
     cursor:pointer;
     display:none;
+  }
+}
+.callback-inner{
+  position: relative;
+  width: 539px;
+  height: 879px;
+  margin: 0 auto;
+  background: url(images/callback.png) no-repeat;
+  transition: transform .6s;
+  transform-style: preserve-3d;
+
+}
+#callback.flip{
+  .callback-inner{
+    transform: rotateY( 180deg );
   }
 }
 .callback-wrapper{
@@ -72,12 +80,12 @@
     color: $c_blocks;
     &:focus{
       background: $white;
-      border-color: $c_border_grey;
+      border:2px solid $c_form_bg;
       color: $c_main;
     }
   }
   &__textarea{
-    border: 1px solid $c_border_grey;
+    border: 2px solid $c_form_bg;
     font: 15px/30px "OpenSans";
     font-style: italic;
     padding: 15px;
@@ -89,9 +97,10 @@
     height: 165px;
     transition: .8s;
     color: $c_blocks;
+    resize: none;
     &:focus{
       background: $white;
-      border-color: $c_border_grey;
+      border: 2px solid $c_form_bg;
       color: $c_main;
     }
   }
@@ -120,6 +129,7 @@
   opacity: 0;
   transition: opacity .6s;
   text-align: center;
+  display: none;
   &__ttl{
     font: 27px/80px "PlayfairDisplaySC";
     color: $c_main;
@@ -140,6 +150,7 @@
     display: none;
   }
   .callback-message{
+    display: block;
     opacity: 1;
     transform: rotateY( 180deg );
   }
