--- a/app/sass/core/_header.scss
+++ b/app/sass/core/_header.scss
@@ -81,7 +81,7 @@
 }
 .header-menu{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     &__items{
     }
     &__links{
@@ -92,6 +92,7 @@
         &:hover{
             color: $c_orange;
             font-weight: bold;
+            margin-left: -2px;
         }
         &::after{
             display:block;
@@ -105,6 +106,9 @@
         &_active{
             color: $c_orange;
             font-weight: bold;
+            &:hover{
+                margin-left: 0;
+            }
         }
     }
 }
