--- a/HTML/app/sass/blocks/_slider.scss
+++ b/HTML/app/sass/blocks/_slider.scss
@@ -83,6 +83,7 @@
   &__ttl{
     font: 36px/48px "PlayfairDisplaySC";
     margin-bottom: 39px;
+    color: $black;
   }
   &__text{
     color: $c_blocks;
